crates/ty_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Com…_-_Invalid_comparisions_-_Invalid_arguments_to…_(d8d2e7423eff8beb).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Invalid comparisions - Invalid arguments to dunder comparison methods
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A:
 2 |     def __eq__(self, other: str) -> bool:
 3 |         return NotImplemented
 4 | 
 5 |     def __ne__(self, other: str) -> bool:
 6 |         return NotImplemented
 7 | 
 8 |     def __lt__(self, other: str) -> bool:
 9 |         return NotImplemented
10 | 
11 |     def __gt__(self, other: str) -> bool:
12 |         return NotImplemented
13 | 
14 |     def __le__(self, other: str) -> bool:
15 |         return NotImplemented
16 | 
17 |     def __ge__(self, other: str) -> bool:
18 |         return NotImplemented
19 | 
20 | # error: [unsupported-operator]
21 | A() == A()
22 | # error: [unsupported-operator]
23 | A() != A()
24 | # error: [unsupported-operator]
25 | A() < A()
26 | # error: [unsupported-operator]
27 | A() > A()
28 | # error: [unsupported-operator]
29 | A() <= A()
30 | # error: [unsupported-operator]
31 | A() >= A()
```

# Diagnostics

```
error[unsupported-operator]: Operator `==` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:21:1
   |
20 | # error: [unsupported-operator]
21 | A() == A()
   | ^^^^^^^^^^
22 | # error: [unsupported-operator]
23 | A() != A()
   |
info: Operator '==' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `!=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:23:1
   |
21 | A() == A()
22 | # error: [unsupported-operator]
23 | A() != A()
   | ^^^^^^^^^^
24 | # error: [unsupported-operator]
25 | A() < A()
   |
info: Operator '!=' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:25:1
   |
23 | A() != A()
24 | # error: [unsupported-operator]
25 | A() < A()
   | ^^^^^^^^^
26 | # error: [unsupported-operator]
27 | A() > A()
   |
info: Operator '<' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:27:1
   |
25 | A() < A()
26 | # error: [unsupported-operator]
27 | A() > A()
   | ^^^^^^^^^
28 | # error: [unsupported-operator]
29 | A() <= A()
   |
info: Operator '>' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:29:1
   |
27 | A() > A()
28 | # error: [unsupported-operator]
29 | A() <= A()
   | ^^^^^^^^^^
30 | # error: [unsupported-operator]
31 | A() >= A()
   |
info: Operator '<=' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:31:1
   |
29 | A() <= A()
30 | # error: [unsupported-operator]
31 | A() >= A()
   | ^^^^^^^^^^
   |
info: Operator '>=' on object of type 'A' cannot be used with object of type 'A'
info: rule `unsupported-operator` is enabled by default

```
